--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
   <head>HI</head>
-  <body>HI This is TanVFamily</body>
+  <body>
+    <a href = "https://tanhongjun666.github.io/newpage">New page</a>
+  </body>
 </html>
