--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>HI</head>
   <body>
+    <header>HI</header>
     <a href = "https://tanhongjun666.github.io/newpage">New page</a>
   </body>
 </html>
