--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <body>
     <header>HI</header>
     <a href = "https://tanhongjun666.github.io/newpage">New page</a>
+    <a href = "https://tanhongjun666.github.io/music">Capital of Music</a>
   </body>
 </html>
