--- a/music.html
+++ b/music.html
@@ -4,8 +4,11 @@
   <head></head>
 
   <body>
-    <heading1>
+    <h1>
       The Capital of Musics
-    </heading1>
+    </h1>
+    <h2>
+      <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1344320665&auto=0&height=66"></iframe>
+    </h2>
   </body>
 </html>
