--- a/music.html
+++ b/music.html
@@ -10,5 +10,8 @@
     <h2>
       <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1344320665&auto=0&height=66"></iframe>
     </h2>
+    <h2>
+      <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5Mn9QQMpsrFQRK1hE8ygzM?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </h2>
   </body>
 </html>
