--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <header>HI</header>
     <a href = "https://tanhongjun666.github.io/newpage">New page</a>
     <a href = "https://tanhongjun666.github.io/music">Capital of Music</a>
+    <h2>
+      <a href ="https://tanhongjun666.github.io/ads">Ads Place</a>
+    </h2>
   </body>
 </html>
