--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE HTML>
 
 <html>
-  <head>HI</head>
+  <head>
+    HI
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script>
+  
+  </head>
   <body>
     <header>HI</header>
     <a href = "https://tanhongjun666.github.io/newpage">New page</a>
