--- a/ads.html
+++ b/ads.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
-  <head>Ads Place</head>
+  <head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script></head>
   <body>
     <h1>These are the ads</h1>
   </body>
