--- a/music.html
+++ b/music.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 
 <html>
-  <head></head>
+  <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script>
+  </head>
 
   <body>
     <h1>
