--- a/ads.html
+++ b/ads.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
 <HTML>
-  <head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
-     crossorigin="anonymous"></script></head>
+  <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script>
+  </head>
   <body>
     <h1>These are the ads</h1>
   </body>
