--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   
   </head>
   <body>
-    <header>HI</header>
-    <a href = "https://tanhongjun666.github.io/newpage">New page</a>
-    <a href = "https://tanhongjun666.github.io/music">Capital of Music</a>
+    <header>
+      <img src="TVF.png" alt="index.html">
+    </header>
+    <a href = "newpage.html">New page</a>
+    <a href = "music.html">Capital of Music</a>
     <h2>
-      <a href ="https://tanhongjun666.github.io/ads">Ads Place</a>
+      <a href ="ads.html">Ads Place</a>
     </h2>
   </body>
 </html>
