--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   
   </head>
   <body>
-    <header>
-      <img src="TVF.png" alt="index.html">
-    </header>
+      <p>
+        <a href = "index.html">
+        <img src="TVF.png" alt="Tan V Family" height = "100">
+        </a>
+      </p>
     <a href = "newpage.html">New page</a>
     <a href = "music.html">Capital of Music</a>
     <h2>
