--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
   <head>
+    <title>
+      Tan V Family
+    </title>
     <p>
       <a href = "index.html">
       <img src="TVF.png" alt="Tan V Family" height = "100">
