--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel = "Fonts" href = "FontSelection.css">
     <title>
       Tan V Family
     </title>
@@ -10,9 +11,8 @@
       <img src="TVF.png" alt="Tan V Family" height = "100">
       </a>
     </p>
-    
-  
   </head>
+  
   <body>
       
     <a href = "newpage.html">New page</a>
