--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   </head>
   
   <body>
-      
-    <a href = "newpage.html">New page</a>
-    <a href = "music.html">Capital of Music</a>
+      <h1>
+        <p class = "font0">
+          This is the TanVFamily temporary website
+        </p>
+      </h1>
+    <a href = "newpage.html" class = "font0">New page</a>
+    <a href = "music.html" class = "font0">Capital of Music</a>
     <h2>
-      <a href ="ads.html">Ads Place</a>
+      <a href ="ads.html" class = "font0">Ads Place</a>
     </h2>
   </body>
 </html>
