--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 
 <html>
   <head>
-    <link rel = "Fonts" href = "FontSelection.css">
+    <link rel = "stylesheet" href = "FontSelection.css">
     <title>
       Tan V Family
     </title>
+
+  </head>
+  
+  <body>
     <p>
       <a href = "index.html">
       <img src="TVF.png" alt="Tan V Family" height = "100">
       </a>
     </p>
-  </head>
-  
-  <body>
-      <h1>
-        <p class = "font0">
+    
+      <h1 class = "font0">
           This is the TanVFamily temporary website
-        </p>
       </h1>
     <a href = "newpage.html" class = "font0">New page</a>
     <a href = "music.html" class = "font0">Capital of Music</a>
