--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <link rel = "stylesheet" href = "FontSelection.css">
+    <link rel = "stylesheet" href = "Banner.css">
     <title>
       Tan V Family
     </title>
@@ -10,11 +11,15 @@
   </head>
   
   <body>
-    <p>
-      <a href = "index.html">
-      <img src="TVF.png" alt="Tan V Family" height = "100">
-      </a>
-    </p>
+    <!-- Top Banner -->
+    <header class = "top-banner">
+      <div class = "banner-content">
+        <a href = "index.html">
+          <img src = "TVF.png" alt = "TanVFamily" class = "banner-logo">
+        </a>
+        <!---->
+      </div>
+    </header>
     
       <h1 class = "font0">
           This is the TanVFamily temporary website
