--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <img src = "TVF.png" alt = "TanVFamily" class = "banner-logo">
         </a>
         <!---->
+        <a href = "CloudDrive.html" class = "font0 top-banner">Cloud</p>
       </div>
     </header>
     
