--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <img src = "TVF.png" alt = "TanVFamily" class = "banner-logo">
         </a>
         <!---->
-        <a href = "CloudDrive.html" class = "font0 top-banner">Cloud</p>
+        <a href = "CloudDrive.html" class = "font0 top-banner">Cloud</a>
       </div>
     </header>
     
