--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>
       Tan V Family
     </title>
-
+    <style>
+      body {
+        background: #101010; color: #fff;
+      }
+    </style>
   </head>
   
   <body>
