--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <img src = "TVF.png" alt = "TanVFamily" class = "banner-logo">
         </a>
         <!---->
-        <a href = "CloudDrive.html" class = "font0 top-banner">Cloud</a>
+        <a href = "CloudDrive.html" class = "font0 top-banner" title = "Only Approved User">Cloud</a>
       </div>
     </header>
     
