--- a/newpage.html
+++ b/newpage.html
@@ -1,6 +1,12 @@
 <html>
   <head>
-    
+    <title>Blank</title>
   </head>
-<p>Pages</p>
+
+  <body>
+    <a href = "/">
+      <img src = "https://www.pngarts.com/explore/203475/download/203474" title = "初音ミク, click to go back to homepage">
+    </a>
+    
+  </body>
 </html>
