--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
     
-      <h1 class = "font0">
+      <h1 class = "font0 top-banner" title = "Not Clickable">
           This is the TanVFamily temporary website
       </h1>
     <a href = "newpage.html" class = "font0">New page</a>
