--- a/newpage.html
+++ b/newpage.html
@@ -5,7 +5,7 @@
 
   <body>
     <a href = "/">
-      <img src = "https://www.pngarts.com/explore/203475/download/203474" title = "初音ミク, click to go back to homepage">
+      <emb src = "https://www.pngarts.com/explore/203475/download/203474" title = "初音ミク, click to go back to homepage">
     </a>
     
   </body>
