--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       body {
         background: #696969; color: #fff;
       }
+      .hover a:hover {
+        color: #00ffff;
+      }
     </style>
   </head>
   
