--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     
-      <h1 class = "font0 top-banner" title = "Not Clickable">
+      <h1 class = "font0 hover" title = "Not Clickable">
           This is the TanVFamily temporary website
       </h1>
     <a href = "newpage.html" class = "font0">New page</a>
