--- a/newpage.html
+++ b/newpage.html
@@ -5,7 +5,7 @@
 
   <body>
     <a href = "/">
-      <emb src = "https://www.pngarts.com/files/9/Anime-Miku-Hatsune-Transparent-Images.png" title = "初音ミク, click to go back to homepage">
+      <img src = "https://www.pngarts.com/files/9/Anime-Miku-Hatsune-Transparent-Images.png" title = "初音ミク, click to go back to homepage">
     </a>
     
   </body>
