--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
     <style>
       body {
-        background: #696969; color: #fff;
+        background: #aa6969; color: #fff;
       }
       .hover a:hover {
         color: #00ffff;
