--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         </a>
         <!---->
         <a href = "CloudDrive.html" class = "font0 top-banner" title = "Only Approved User">Cloud</a>
+        <a href = "_blank" class = "font0 top-banner">Site 1</a>
+        <a href = "about:blank" class = "font0 top-banner">Site 2</a>
+        <a href = "chrome://dino" class = "font0 top-banner">Bombadino Crocodilo</a>
       </div>
     </header>
     
