--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href = "CloudDrive.html" class = "font0 top-banner" title = "Only Approved User">Cloud</a>
         <a href = "_blank" class = "font0 top-banner">Site 1</a>
         <a href = "about:blank" class = "font0 top-banner">Site 2</a>
-        <a href = "chrome://dino" class = "font0 top-banner">Bombadino Crocodilo</a>
+        <a href = "donothing" class = "font0 top-banner">Bombadino Crocodilo</a>
       </div>
     </header>
     
@@ -40,5 +40,6 @@
     <h2>
       <a href ="ads.html" class = "font0">Ads Place</a>
     </h2>
+    <iframe src = "chrome://dino" height: 500px; width: 1000px;></iframe>
   </body>
 </html>
