--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <h2>
       <a href ="ads.html" class = "font0">Ads Place</a>
     </h2>
-    <iframe src = "chrome://dino" height: 500px; width: 1000px;></iframe>
+    <iframe src = "chrome://dino" height = "500" width = "1000" title = "DIno"></iframe>
   </body>
 </html>
