--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <a href = "newpage.html" class = "font0">New page</a>
     <a href = "music.html" class = "font0">Capital of Music</a>
     <h2>
-      <a href ="ads.html" class = "font0">Ads Place</a>
+      <a href ="donor.html" class = "font0">Supporters Paradise</a>
     </h2>
     <iframe src = "DINO.html" title = "DIno"></iframe>
   </body>
