--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html>
   <head>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script>
+    
     <link rel = "stylesheet" href = "FontSelection.css">
     <link rel = "stylesheet" href = "Banner.css">
     <title>
