--- a/donor.html
+++ b/donor.html
@@ -2,6 +2,8 @@
 <HTML>
   <head>
     <tite>Honor of Donor</tite>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <h1>The Donor list will be shown here</h1>
