--- a/donor.html
+++ b/donor.html
@@ -2,8 +2,7 @@
 <HTML>
   <head>
     <tite>Honor of Donor</tite>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189238363387172"
-     crossorigin="anonymous"></script>
+    <script type='text/javascript' src='//pl27386865.profitableratecpm.com/e1/2e/d3/e12ed33301f5f5b996ee7fa1db4ca0e8.js'></script>
   </head>
   <body>
     <h1>The Donor list will be shown here</h1>
