--- a/donor.html
+++ b/donor.html
@@ -2,16 +2,7 @@
 <HTML>
   <head>
     <tite>Honor of Donor</tite>
-   	
-    <script type="text/javascript">
-	atOptions = {
-		'key' : 'f0a117a84783bc0812ec57c55d63cdbb',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
+	  
   </head>
   <body>
     <h1>The Donor list will be shown here</h1>
@@ -26,6 +17,17 @@
 	};
 </script>
 <script type="text/javascript" src="//www.highperformanceformat.com/222c3b9b228c1cbbc262acea52c9cb08/invoke.js"></script>
+
+	  <script type="text/javascript">
+	atOptions = {
+		'key' : 'f0a117a84783bc0812ec57c55d63cdbb',
+		'format' : 'iframe',
+		'height' : 300,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f0a117a84783bc0812ec57c55d63cdbb/invoke.js"></script>
 
    
 </HTML>
