--- a/donor.html
+++ b/donor.html
@@ -2,6 +2,17 @@
 <HTML>
   <head>
     <tite>Honor of Donor</tite>
+
+	  <style>
+  .ad-right {
+    position: fixed;
+    right: 0;
+    top: 100px; /* Adjust this value if you want it lower or higher */
+    z-index: 999;
+    width: 160px; /* Match ad width */
+  }
+	  </style>
+
 	  
   </head>
   <body>
@@ -30,7 +41,7 @@
 <script type="text/javascript" src="//www.highperformanceformat.com/f0a117a84783bc0812ec57c55d63cdbb/invoke.js"></script>
 
 	  <script async="async" data-cfasync="false" src="//pl27387110.profitableratecpm.com/e56e7b41059132ca7434ee20c60a36c2/invoke.js"></script>
-<div id="container-e56e7b41059132ca7434ee20c60a36c2" style="margin-left: auto; margin-right: 0;" ></div>
+<div id="container-e56e7b41059132ca7434ee20c60a36c2" class = "ad-right" ></div>
 
    
 </HTML>
