--- a/donor.html
+++ b/donor.html
@@ -16,6 +16,7 @@
 	  
   </head>
   <body>
+	  <button onclick = "window.location.href = '/';">Back to Home</button>
     <h1>The Donor list will be shown here</h1>
 
 	  <script type="text/javascript">
