--- a/donor.html
+++ b/donor.html
@@ -19,7 +19,7 @@
 	  
   </head>
   <body>
-	  <button onclick = "window.location.href = '/';">Back to Home</button>
+	  <button onclick = "window.location.href = '/';" class = "PU-hover">Back to Home</button>
     <h1>The Donor list will be shown here</h1>
 
 	  <script type="text/javascript">
